# RUNE

./: Cargo.toml  PRODUCT_PLAN.md  README.md
.roles/: README.md  ROLE.md  ai-contract-consumer.md  contract-model-steward.md  future-agent.md  generator-interop-steward.md  macro-safety-steward.md  platform-adapter-author.md  rust-maintainer.md  security-privacy-reviewer.md  vtrace-traceability-auditor.md
.roles/parliament/: ai-contract-consumer.md  contract-model-steward.md  generator-interop-steward.md  macro-safety-steward.md  vtrace-traceability-auditor.md
.roles/stakeholders/: future-agent.md  platform-adapter-author.md  rust-maintainer.md
context/waves/: PHASES.md
crates/rune-adapters/: Cargo.toml
crates/rune-cli/: Cargo.toml
crates/rune-core/: Cargo.toml
crates/rune-derive/: Cargo.toml
docs/: CORPUS.md  README.md  adopter-guide.md  release-readiness.md
docs/architecture/: README.md  agent-protocol-interface.md  capability-sensitivity-policy.md  compatibility-negotiation.md  crate-owned-registry-workflow.md  derive-evidence-automation.md  derive-v1-ergonomics.md  descriptor-model.md  deterministic-discovery-interface.md  downstream-adapter-interface.md  evidence-runtime-packets.md  explicit-registry-interface.md  external-profile-interface.md  generator-profile-interface.md  inspection-surface.md  interface-control.md  mission-2-planning-index.md  retained-evidence-workflow.md  runtime-host-design.md  semantic-registry-interface.md  state-graph-interface.md
docs/concepts/: README.md  data-contracts.md  descriptors-as-contracts.md  (+2 more)
(+371 files in other folders)
