[workspace]
members = [
    "crates/rune-adapters",
    "crates/rune-cli",
    "crates/rune-core",
    "crates/rune-derive",
    "examples/rune-adopter",
    "examples/rune-shape-calculator",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
rune-core = { path = "crates/rune-core" }
rune-adapters = { path = "crates/rune-adapters" }
rune-derive = { path = "crates/rune-derive" }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
trybuild = "1"
